--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.1.13
-  firebase: ^9.0.2
+
   firebase_core: ^1.15.0
+  
+  # firebase_storage: ^10.2.14
 
 dev_dependencies:
   flutter_test:
